# mxl-models

./: .gitignore  .pre-commit-config.yaml  README.md  check_if_imported.py  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
1.2.0/: 404.html  _dynamic_enterobactin.html  _population_dynamics.html  _tripartite_dynamics.html  davis2017.html  ebeling2026.html  elowitz2000_repressilator.html  index.html  lotka_volterra.html  matuszynska2016_npq.html  matuszynska2016_phd.html  matuszynska2019.html  nguyen2026_tomato.html  pfennig2024_synechocystis.html  poolman2000.html  prigogine1968_brusselator.html  saadat2021.html  selkov1968_oscillator.html  sitemap.xml  yokota1985.html
1.3.0/: 404.html  _dynamic_enterobactin.html  _population_dynamics.html  _tripartite_dynamics.html  davis2017.html  ebeling2026.html  ebenhoeh2014.html  elowitz2000_repressilator.html  fvcb.html  hahn1987.html  index.html  lazar1997.html  lotka_volterra.html  matuszynska2016_npq.html  matuszynska2016_phd.html  matuszynska2019.html  nguyen2026_tomato.html  pfennig2024_synechocystis.html  poolman2000.html  prigogine1968_brusselator.html  saadat2021.html  selkov1968_oscillator.html  sitemap.xml  yokota1985.html  zhu_2009.html
docs/: Gu_2023.ipynb  _dynamic_enterobactin.ipynb  _population_dynamics.ipynb  _tripartite_dynamics.ipynb  bellasio2019.ipynb  bernacchi2013.ipynb  davis2017.ipynb  davis2017a.ipynb  davis2017b.ipynb  ebeling2026.ipynb  ebenhoeh2014.ipynb  ebenhoeh2014b.ipynb  elowitz2000_repressilator.ipynb  fuente2024.ipynb  fvcb.ipynb  hahn1987.ipynb  lam2026.ipynb  lazar1997.ipynb  (+24 more)
(+97 files in other folders)
