[project]
name = "mxlmodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mxlpy>=0.38.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "jupyter>=1.1.1",
    "line-profiler>=5.0.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.5.42",
    "mkdocs>=1.6.1",
    "pre-commit>=4.0.1",
    "pyright>=1.1.403",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "ruff>=0.15.11",
    "ssort>=0.13.0",
    "toml-sort>=0.23.1",
]
